--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "better-sqlite3": "^12.6.2",
+    "express": "^4.19.2",
+    "pg": "^8.17.2"
   }
 }
