--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-node_modules
-.env
+# dependencies
+node_modules/
+
+# local database
+totem.db
+*.db
+*.bak
+
+# temp / garbage files
+(c)
+Microsoft
+cd
+{error
+
+# OS
+.DS_Store
+Thumbs.db
