--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,20 @@
-# dependencies
+# Node
 node_modules/
 
-# local database
-totem.db
+# Databases / SQLite
+data.db
+data.db-*
+*.sqlite
 *.db
 *.bak
 
-# temp / garbage files
-(c)
-Microsoft
-cd
-{error
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# OS
+# OS / IDE
 .DS_Store
 Thumbs.db
+.vscode/
+.idea/
