--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "totem-p0-api",
   "version": "1.0.0",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "better-sqlite3": "^12.6.2",
-    "express": "^4.19.2",
-    "pg": "^8.17.2"
+    "express": "^4.19.2"
   }
 }
