--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,37 @@
+# =========================
 # Node
+# =========================
 node_modules/
 
+# =========================
 # Databases / SQLite
+# =========================
 data.db
 data.db-*
 *.sqlite
 *.db
 *.bak
 
+# =========================
 # Logs
+# =========================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# =========================
 # OS / IDE
+# =========================
 .DS_Store
 Thumbs.db
 .vscode/
 .idea/
+
+# =========================
+# Console / temp garbage
+# =========================
+(c)
+cd
+Microsoft
+notepad
+{error
