--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "better-sqlite3": "^12.6.2",
+    "express": "^4.19.2",
+    "node-cron": "^4.2.1"
   }
 }
