--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "better-sqlite3": "^12.6.2",
     "express": "^4.19.2",
-    "node-cron": "^4.2.1"
+    "node-cron": "^4.2.1",
+    "pg": "^8.17.2"
   }
 }
