--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^12.6.2",
+    "cors": "^2.8.6",
     "express": "^4.19.2",
     "node-cron": "^4.2.1",
     "pg": "^8.17.2"
