--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "better-sqlite3": "^12.6.2",
     "cors": "^2.8.6",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.2.1",
     "node-cron": "^4.2.1",
     "pg": "^8.17.2"
   }
