--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,44 @@
-# env
-.env
-.env.*
-
 # node
 node_modules/
 npm-debug.log*
-yarn-debug.log*
-pnpm-debug.log*
 
-# OS / editor
-.DS_Store
-Thumbs.db
+# env
+.env
 
-# sqlite leftovers (never commit)
+# local databases / artifacts
 *.db
 *.db-shm
 *.db-wal
+*.bak
+*.DEBUG.bak
 
-# logs / runtime
-logs/
-tmp/
-temp/
+# sql dumps / local migrations
+db_schema_v1.sql
+migrations/*.sql
 
-# misc accidental files
-ADD
-ALTER
+# local temp / cli artifacts
+cd
 dir
+mkdir
 node
 npm
+psql
 taskkill
 curl
-{
+notepad
+
+# local test / widget / sdk
+test-widget.html
+widget.html
+sdk/
+widget/
+front/
+_public
+
+# draft docs (canonical kept in repo)
+docs/RATE_LIMIT_RULES.md
+docs/TOKEN_RULES_AND_ERRORS.md
+
+# OS
+.DS_Store
+Thumbs.db
