--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,42 @@
-# Node
+# === Node / Runtime ===
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Env
+# === Environment ===
 .env
 .env.*
+!.env.example
 
-# Logs
+# === Logs ===
 logs/
 *.log
 
-# Runtime
+# === Build artifacts ===
 dist/
 build/
 
-# OS
+# === OS / Editor ===
 .DS_Store
 Thumbs.db
 
-# Backups (never commit)
-backups/
+# === Database / Dumps / Snapshots ===
+*.sqlite
+*.sqlite3
+*.db
 *.bak
+db_snapshot/
+db_schema_freeze.sql
 
-# Allow DB migrations (IMPORTANT)
+# === Local tools / temp ===
+notepad/
+psql/
+cd/
+tmp/
+temp/
+.cache/
+
+# === Migrations (ALLOWED) ===
 !migrations/
 !migrations/*.sql
