--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "totem-p0-api",
   "version": "1.0.0",
-  "type": "module",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/app.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
