FIX: start src/app.js (ESM) + confirm endpoint

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "totem-p0-api",
   "version": "1.0.0",
+  "type": "module",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js"
