--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "totem-p0-api",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
